--- a/style.css
+++ b/style.css
@@ -1835,3 +1835,10 @@ input:checked + .slider:before { transform: translateX(22px); }
     0%, 100% { opacity: 0; transform: translateY(20px); }
     10%, 90% { opacity: 1; transform: translateY(0); }
 }
+
+
+/* --- PESTAÑA DE CURSOR --- */
+#tab-content-cursor {
+    overflow-y: auto; /* Habilita el scroll vertical si el contenido se desborda */
+}
+
